Add extra CHECKs and DLOGs, and missing MX_PORT_OPT_V2.

This reverts https://chromium-review.googlesource.com/562660.

Our current Fuchsia SDK has a kernel version which supports both the
old ports API, and the new "V2" API, so we must pass the MX_PORT_OPT_V2
option, to create the right version of port. We will un-do this change,
and possibly migrate to using the ulib/port APIs, in future.

This CL also fixes StopWatchingFileDescriptor() to cope with being
called more than once, to match the API/interface expectations, adds
some additional Debug logging for API failures, and adds CHECKs on
calls which we cannot cope with seeing fail.

Bug: 740305

Change-Id: I2579039fbd747e528da3c59cba9f2e1d07bf7326
Reviewed-on: https://chromium-review.googlesource.com/564739
Commit-Queue: Nico Weber <thakis@chromium.org>
Reviewed-by: Nico Weber <thakis@chromium.org>
Reviewed-by: Daniel Cheng <dcheng@chromium.org>
Cr-Commit-Position: refs/heads/master@{#485787}
Former-commit-id: 14e88d132b8de80803a825078fe16fd433410360